@@ -28,6 +28,8 @@
 		<script type="text/javascript" src="js/weapons/config.js"></script>
 		<script type="text/javascript" src="js/weapons/weapon.js"></script>
 		<script type="text/javascript" src="js/weapons/bulet.js"></script>
+		<script type="text/javascript" src="js/weapons/damage_table.js"></script>
+		<script type="text/javascript" src="js/weapons/persistent_damage.js"></script>
 		
 		<script type="text/javascript" src="js/buildings/abstract.js"></script>
 		<script type="text/javascript" src="js/buildings/bridge_type.js"></script>
@@ -81,7 +83,6 @@
 		<script type="text/javascript" src="js/mouse.js"></script>
 		<script type="text/javascript" src="js/levels/level1.js"></script>
 		<script type="text/javascript" src="js/object_draw.js"></script>
-		<script type="text/javascript" src="js/damage_table.js"></script>
 		<script type="text/javascript" src="js/game.js"></script>
 	</head>
 	<body>
