@@ -7,10 +7,12 @@
  * can_shoot_ground <= CanShootGround() & CanShootGroundUnit() & CanShootBuilding()
  * can_shoot_flyer <= CanShootFlyer()
  * offence <= SetOffense(type strength area_effect)
+ * persistent_damage <= PersistentDamage(damage_number damage_delay offense_type offense_strength area_effect)
  * fire_sound <= SetFireSound()
  * hit_sound <= SetHitSound()
  * hit_explosion <= SetHitExplosion()
- * bulet_speed <= SetSpeed(?InitialSpeed?, ?acceleration?, ?maxspeed?, ?rotationalspeed?)
+ * bulet_speed => (InitialSpeed*29)/0.9 <= SetSpeed(InitialSpeed, ?acceleration?, ?maxspeed?, ?rotationalspeed?)
+ *                 0.9 - should be dynamic depending on game run speed: 0.9  - means that game running at 90% speed
  */
 var WeaponConfig = {
 	CycloneCannon: {
@@ -28,7 +30,7 @@ var WeaponConfig = {
 		},
 		fire_sound: 'gxcycwc0',
 		hit_explosion: 'eoncnex0_explosion',
-		bulet_speed: 700
+		bulet_speed: 645
 	},
 	FortressCannon: {
 		bulet_animation: 'eoskypr0_animation',
@@ -44,7 +46,7 @@ var WeaponConfig = {
 		},
 		fire_sound: 'gxskywc0',
 		hit_explosion: 'fortress_hit_explosion',
-		bulet_speed: 2000
+		bulet_speed: 1127
 	},
 	GatPlasma: {
 		bulet_animation: 'eoplspr1_animation',
@@ -60,7 +62,7 @@ var WeaponConfig = {
 		},
 		fire_sound: 'gxigtwc0',
 		hit_explosion: 'eoplsex2_explosion',
-		bulet_speed: 700
+		bulet_speed: 645
 	},
 	GroundToAirLaser: {
 		bulet_animation: 'eoorbpr0_animation',
@@ -76,7 +78,7 @@ var WeaponConfig = {
 		},
 		fire_sound: 'gxmadwc0',
 		hit_explosion: 'eoblatr0_explosion',
-		bulet_speed: 2000
+		bulet_speed: 1289
 	},
 	IMPArtilleryShell: {
 		bulet_animation: 'eoiarpr0_animation',
@@ -90,10 +92,17 @@ var WeaponConfig = {
 			strength: 30,
 			area_effect: 100
 		},
+		persistent_damage: {
+			damage_number: 5,
+			damage_delay: 10,
+			type: 'E3', 
+			strength: 2,
+			area_effect: 90
+		},
 		fire_sound: 'gxiarwc0',
 		hit_sound: 'gxex1oc0',
 		hit_explosion: 'eoiarex0_explosion',
-		bulet_speed: 200 //SetSpeed(7.0 0.0 5.0 1)
+		bulet_speed: 256
 	},
 	IMPFixedGroundToAirLaser: {
 		bulet_animation: 'eoorbpr0_animation',
@@ -109,7 +118,7 @@ var WeaponConfig = {
 		},
 		fire_sound: 'gxiaawc0',
 		hit_explosion: 'eoblatr0_explosion',
-		bulet_speed: 2000 //SetSpeed(40.0 0.0 40.0 1)
+		bulet_speed: 1289
 	},
 	LaserCannon: {
 		bulet_animation: 'eolaspr3_animation',
@@ -125,7 +134,7 @@ var WeaponConfig = {
 		},
 		fire_sound: 'gxsttwc0',
 		hit_explosion: 'eolasex1_explosion',
-		bulet_speed: 700 //SetSpeed(20.0 0.0 20.0 1)
+		bulet_speed: 645
 	},
 	LaserRifle: {
 		bulet_animation: 'eolaspr2_animation',
@@ -141,7 +150,7 @@ var WeaponConfig = {
 		},
 		fire_sound: 'gxlgnwc0',
 		hit_explosion: 'smalllaser_hitpuff_explosion',
-		bulet_speed: 700 //SetSpeed(20.0 0.0 1000.0 1)
+		bulet_speed: 645
 	},
 	NeutronAss: {
 		bulet_animation: 'eoncnpr0_animation',
@@ -157,7 +166,7 @@ var WeaponConfig = {
 		},
 		fire_sound: 'gxneuwc0',
 		hit_explosion: 'eoncnex0_explosion',
-		bulet_speed: 2000 //SetSpeed(35.0  0.0  1000.0 1)
+		bulet_speed: 1127
 	},
 	PlasmaCannon: {
 		bulet_animation: 'eoplspr1_animation',
@@ -173,7 +182,7 @@ var WeaponConfig = {
 		},
 		fire_sound: 'gxpltwc0',
 		hit_explosion: 'eoplsex2_explosion',
-		bulet_speed: 2000 //SetSpeed(35.0  0.0  1000.0 1)
+		bulet_speed: 1127
 	},
 	PlasmaRifle: {
 		bulet_animation: 'eoplspr0_animation',
@@ -189,7 +198,7 @@ var WeaponConfig = {
 		},
 		fire_sound: 'gxbonwc0',
 		hit_explosion: 'eoplsex0_explosion',
-		bulet_speed: 700
+		bulet_speed: 548
 	},
 	PolyAcid: {
 		bulet_animation: 'eorfgpr0_animation',
@@ -205,7 +214,7 @@ var WeaponConfig = {
 		},
 		fire_sound: 'gxextwc1',
 		hit_explosion: 'eorfgex0_explosion',
-		bulet_speed: 700
+		bulet_speed: 161
 	},
 	TachyonCannon: {
 		bulet_animation: 'eotacpr0_animation',
@@ -221,6 +230,6 @@ var WeaponConfig = {
 		},
 		fire_sound: 'gxtctwc0',
 		hit_explosion: 'eotacex0_explosion',
-		bulet_speed: 2000
+		bulet_speed: 1127
 	}
 };
